Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • G GLib
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 862
    • Issues 862
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 39
    • Merge requests 39
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • GLib
  • Issues
  • #1522
Closed
Open
Issue created Sep 11, 2018 by Ghost User@ghost

Trash not working on NTFS folder accessed from symlink

With glib 2.57+ trash is not working with files saved on folders in NTFS when accessing them from a symlink (it works if using the "real" path) I found the culprit commit with bisect: e22bffb5 I haven't tested yet, but I think that the problem lies in the changes in gio/glocalfileinfo.c file.

Steps to reproduce:

  • Create a symlink from a ext4 partition folder to a NTFS one. (probably they just need to be in a different partition)
  • Using a glib file manager (tested with Thunar and Nautilus) try to send any file from that folder to trash can.

Also, I noticed that deleting files with gio trash seems to work fine, the issue happens only with file managers.

Assignee
Assign to
Time tracking